_sass/_print.scss
@media print {
   @page {
     size: A4;
   }
 
   body {
     font-size: 12pt;
   }
 
   img.avatar {
     filter: grayscale(1);
     -webkit-filter: grayscale(1);
   }

   .contact-container .name {
      font-size: 2em; /* Adjust size as needed */
    }

   .section {
      margin-bottom: 50px;
   }
 
    .contact-container .contact-list li {
      margin-top: 20px !important; /* Adjust space as needed */
      margin-bottom: 60px !important; /* Adjust space as needed */
    }

    .contact-container .contact-list .contact-text {
      margin-left: 10px !important; /* Adjust spacing as needed */
    }
 
   .wrapper {
     display: block; 
   }
 
   .main-wrapper {
     width: 100%;  /* full width */
     position: relative;  /* added */
   }

   .sidebar-wrapper {
      display: none;  /* added */
    }
 
   .remove-container.container-block {
       display: none;
    }

    footer {
       display: none;
    }

    .skill-tag {
      background: none;
      border-color: #888;
    }

}

